--- a/component-form/component-uispec-mapper/pom.xml
+++ b/component-form/component-uispec-mapper/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.talend.sdk.component</groupId>
     <artifactId>component-form</artifactId>
-    <version>1.65.0-SNAPSHOT</version>
+    <version>0.65.0M4-SNAPSHOT</version>
   </parent>
 
   <artifactId>component-uispec-mapper</artifactId>
